--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="center-heroku">
-      <p>Heroku Deployment Demo</p>
+      <p>Heroku Deployment Demo For John</p>
     </div>
   </body>
 </html>
