--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
   <body>
     <div class="center-heroku">
       <p>Heroku Deployment Demo For John</p>
+      <section
+        style="width: 200px; height: 100px; background-color: blueviolet"
+      >
+        <div>This is something different</div>
+      </section>
     </div>
   </body>
 </html>
